# parquet-record

./: Cargo.toml  GENERATED_CODE_EXAMPLES.md  README.md  simple_test.rs
.github/workflows/: auto-bump.yml  bump-version.yml  publish.yml
examples/: basic_test.rs  basic_usage.rs  minimal_test.rs  parallel_usage.rs  parquet_flat_demo.rs  parquet_flat_example.rs  simple_test.rs  vec_test.rs
parquet-record-derive/: .gitignore  Cargo.toml
parquet-record-derive/src/: lib.rs
src/: lib.rs  pool.rs
tests/: all_tests.rs  collection_functionality_tests.rs  collections_test.rs  error_handling.rs  integration_test.rs  integration_tests.rs  parquet_flat_tests.rs  read_test.rs  simple_tests.rs
