[package]
name = "parquet-record"
version = "0.1.0"
edition = "2021"
authors = ["Maintainer Name <maintainer@example.com>"]
description = "A Rust library for efficient serialization and deserialization of structs to/from Parquet format with support for batch writing and parallel reading"
license = "MIT/Apache-2.0"

[lib]
name = "parquet_record"
path = "src/lib.rs"

[dependencies]
parquet = "57"
arrow = { version = "57", features = ["ipc"] }
rayon = "1.11.0"

