[package]
name = "parquet-record"
version = "0.1.1"
edition = "2021"
authors = ["Blake Sanie <blake@sanie.com>"]
description = "High-performance Rust library for moving structs to/from disk using Parquet format. Abstracts complex Arrow/Parquet usage while providing batch writing and parallel reading capabilities for maximum performance."
license = "MIT"

[lib]
name = "parquet_record"
path = "src/lib.rs"

[dependencies]
parquet = "57"
arrow = { version = "57", features = ["ipc"] }
rayon = "1.11.0"

